--- a/pages/styles/styles.css
+++ b/pages/styles/styles.css
@@ -14,7 +14,7 @@ a {
 
 ul {
     text-align: left;
-    font-size: small;
+    font-size: 16px;
 }
 
 h5 {
@@ -30,9 +30,8 @@ h4 {
 }
 
 div {
-    margin-bottom: 1em;
     text-align: left;
-    margin-top: 0em;
+     margin: 0em 0.3em 1em;
 }
 
 img {
@@ -40,4 +39,33 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5em;
+}
+
+p {
+    font-size: 16px;
+    margin: 0;
+}
+
+@media (min-width: 1100px) {
+    h5 {
+        font-size: 1.6em;
+    }
+    h4 {
+        font-size: 2em;
+    }
+    li, p {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 769px) {
+    h5 {
+        font-size: 1em;
+    }
+    h4 {
+        font-size: 0.8em;
+    }
+    li, p {
+        font-size: 12px;
+    }
 }
