--- a/pages/styles/styles.css
+++ b/pages/styles/styles.css
@@ -1,7 +1,7 @@
 
 
 .mainContainer {
-    background-color: burlywood;
+    background-color: #f7faff;
     text-align: center;
     margin: auto;
 }
